// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Backstage /> renders correctly 1`] = `
<Fragment>
  <div
    className="nz-backstage-backstage_Overlay nz-show"
    onClick={[Function]}
  />
  <div
    className="nz-backstage-backstage"
  >
    <div
      className="nz-header"
    />
    <ul />
    <div
      className="nz-footer"
    />
  </div>
</Fragment>
`;

exports[`<Backstage /> should set is-open class 1`] = `
<Fragment>
  <div
    className="nz-backstage-backstage_Overlay nz-open nz-show"
    onClick={[Function]}
  />
  <div
    className="nz-backstage-backstage nz-open"
  >
    <div
      className="nz-header"
    />
    <ul />
    <div
      className="nz-footer"
    />
  </div>
</Fragment>
`;
